@@ -829,6 +829,16 @@ CREATE TRIGGER insert_notify AFTER INSERT ON tags FOR EACH STATEMENT EXECUTE PRO
 ---------------------------------
 
 
+-- bayesian rating view
+CREATE OR REPLACE VIEW vn_ratings AS
+  SELECT vid, COUNT(uid) AS votecount, (
+      ((SELECT COUNT(vote)::real/COUNT(DISTINCT vid)::real FROM votes)*(SELECT AVG(vote)::real FROM votes) + SUM(vote)::real) /
+      ((SELECT COUNT(vote)::real/COUNT(DISTINCT vid)::real FROM votes) + COUNT(uid)::real)
+    ) AS rating
+  FROM votes
+  GROUP BY vid;
+
+
 -- Sequences used for ID generation of items not in the DB
 CREATE SEQUENCE covers_seq;
 
